--- a/employees/webapp/view/App.view.xml
+++ b/employees/webapp/view/App.view.xml
@@ -3,14 +3,28 @@
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true"
     xmlns="sap.m"
->
-	<Shell id="shell">
+    xmlns:core="sap.ui.core">
+	
+    <Shell id="shell">
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<content />
+					<content>
+                        <HBox>
+                            <Label id="labelEmployee" text="{i18n>labelEmployee}" labelFor="inputEmployee" class="sapUiSmallMargin"/>
+                            <Input id="inputEmployee" maxLength="10" width="200px" class="sapUiSmallMarginEnd" liveChange="onValidate" submit="onMessage"/>
+                            <Label id="labelCountry" text="{i18n>labelCountry}" labelFor="slCountry" class="sapUiSmallMargin" visible="false"/>
+                            <Select id="slCountry" forceSelection="false" visible="false">
+                                <core:Item key="US" text="{i18n>countryUS}"/>
+                                <core:Item key="ES" text="{i18n>countryES}"/>
+                                <core:Item key="UK" text="{i18n>countryUK}"/>                                
+                            </Select>
+                        </HBox>                    
+                    </content>
 				</Page>
 			</pages>
 		</App>
-	</Shell>
+	
+    </Shell>
+
 </mvc:View>
