--- a/employees/webapp/view/App.view.xml
+++ b/employees/webapp/view/App.view.xml
@@ -12,14 +12,52 @@
 					<content>
                         <HBox>
                             <Label id="labelEmployee" text="{i18n>labelEmployee}" labelFor="inputEmployee" class="sapUiSmallMargin"/>
-                            <Input id="inputEmployee" maxLength="10" width="200px" class="sapUiSmallMarginEnd" liveChange="onValidate" submit="onMessage"/>
-                            <Label id="labelCountry" text="{i18n>labelCountry}" labelFor="slCountry" class="sapUiSmallMargin" visible="false"/>
-                            <Select id="slCountry" forceSelection="false" visible="false">
-                                <core:Item key="US" text="{i18n>countryUS}"/>
-                                <core:Item key="ES" text="{i18n>countryES}"/>
-                                <core:Item key="UK" text="{i18n>countryUK}"/>                                
+                            <Input id="inputEmployee" value="{/EmployeeId}" maxLength="10" width="200px" class="sapUiSmallMarginEnd"/>
+                            <Label id="labelCountry" text="{i18n>labelCountry}" labelFor="slCountry" class="sapUiSmallMargin"/>
+                            <Select id="slCountry" selectedKey="{/CountryKey}" items="{/ListCountry}" forceSelection="false">
+                                <core:Item key="{Key}" text="{Text}"/>                                
                             </Select>
-                        </HBox>                    
+                            <Button id="btnFilter" text="{i18n>btnFilter}" icon="sap-icon://search" press="onFilter" class="sapUiSmallMarginEnd"/>
+                            <Button id="btnClearFilter" text="{i18n>btnClearFilter}" icon="sap-icon://clear-filter" press="onClearFilter" class="sapUiSmallMarginEnd"/>
+                        </HBox> 
+                        <HBox >
+                            <Panel>
+                                <Table id="tableEmployee" items="{/Employees}">
+                                    <columns>
+                                        <Column>
+                                            <header>
+                                                <Label text="{i18n>tableId}"/>
+                                            </header>
+                                        </Column>
+                                        <Column>
+                                            <header>
+                                                <Label text="{i18n>tableName}"/>
+                                            </header>
+                                        </Column>
+                                        <Column>
+                                            <header>
+                                                <Label text="{i18n>tableCountry}"/>
+                                            </header>
+                                        </Column>
+                                        <Column>
+                                            <header>
+                                                <Label text="{i18n>tableCity}"/>
+                                            </header>
+                                        </Column>
+                                    </columns>
+                                    <items>
+                                        <ColumnListItem>
+                                            <cells>
+                                                <Label text="{EmployeeID}"/>
+                                                <Label text="{LastName}, {FirstName}"/>
+                                                <Label text="{Country}"/>
+                                                <Label text="{City}"/>
+                                            </cells>
+                                        </ColumnListItem>
+                                    </items>
+                                </Table>
+                            </Panel>
+                        </HBox>                   
                     </content>
 				</Page>
 			</pages>
