--- a/employees/webapp/view/App.view.xml
+++ b/employees/webapp/view/App.view.xml
@@ -12,17 +12,19 @@
 					<content>
                         <HBox>
                             <Label id="labelEmployee" text="{i18n>labelEmployee}" labelFor="inputEmployee" class="sapUiSmallMargin"/>
-                            <Input id="inputEmployee" value="{/EmployeeId}" maxLength="10" width="200px" class="sapUiSmallMarginEnd"/>
+                            <Input id="inputEmployee" value="{jsonCountries>/EmployeeId}" maxLength="10" width="200px" class="sapUiSmallMarginEnd"/>
                             <Label id="labelCountry" text="{i18n>labelCountry}" labelFor="slCountry" class="sapUiSmallMargin"/>
-                            <Select id="slCountry" selectedKey="{/CountryKey}" items="{/ListCountry}" forceSelection="false">
-                                <core:Item key="{Key}" text="{Text}"/>                                
+                            <Select id="slCountry" selectedKey="{jsonCountries>/CountryKey}" items="{jsonCountries>/ListCountry}" forceSelection="false">
+                                <core:Item key="{jsonCountries>Key}" text="{jsonCountries>Text}"/>                                
                             </Select>
                             <Button id="btnFilter" text="{i18n>btnFilter}" icon="sap-icon://search" press="onFilter" class="sapUiSmallMarginEnd"/>
                             <Button id="btnClearFilter" text="{i18n>btnClearFilter}" icon="sap-icon://clear-filter" press="onClearFilter" class="sapUiSmallMarginEnd"/>
                         </HBox> 
                         <HBox >
                             <Panel>
-                                <Table id="tableEmployee" items="{/Employees}">
+                                <Button id="btnShowCity" text="{i18n>showCity}" visible="{jsonModelConfig>/visibleBtnShowCity}" press="onShowCity"/>
+                                <Button id="btnHideCity" text="{i18n>hideCity}" visible="{jsonModelConfig>/visibleBtnHideCity}" press="onHideCity"/>
+                                <Table id="tableEmployee" items="{jsonEmployees>/}">                                    
                                     <columns>
                                         <Column>
                                             <header>
@@ -39,19 +41,19 @@
                                                 <Label text="{i18n>tableCountry}"/>
                                             </header>
                                         </Column>
-                                        <Column>
+                                        <Column visible="{jsonModelConfig>/visibleCity}">
                                             <header>
                                                 <Label text="{i18n>tableCity}"/>
                                             </header>
                                         </Column>
                                     </columns>
                                     <items>
-                                        <ColumnListItem>
+                                        <ColumnListItem type="Active" press="showPostalCode">
                                             <cells>
-                                                <Label text="{EmployeeID}"/>
-                                                <Label text="{LastName}, {FirstName}"/>
-                                                <Label text="{Country}"/>
-                                                <Label text="{City}"/>
+                                                <Label text="{jsonEmployees>EmployeeID}"/>
+                                                <Label text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"/>
+                                                <Label text="{jsonEmployees>Country}"/>
+                                                <Label text="{jsonEmployees>City}" visible="{jsonModelConfig>/visibleCity}"/>
                                             </cells>
                                         </ColumnListItem>
                                     </items>
